--- a/style.css
+++ b/style.css
@@ -61,15 +61,6 @@ header .logo {
 }
 
 /* FAIXA DE CEP */
-.btn-cep {
-  background-color: #fff;
-  padding: 6px 10px;
-  border-radius: 6px;
-  font-weight: bold;
-  color: #333;
-  text-decoration: none;
-}
-
 .cep-bar {
   background-color: #ffe600;
   padding: 10px 16px;
@@ -78,6 +69,8 @@ header .logo {
   font-weight: normal;
   font-family: Arial, sans-serif;
   font-size: 14px;
+  gap: 10px;
+  justify-content: space-between;
 }
 
 .cep-bar a {
@@ -93,6 +86,16 @@ header .logo {
   font-size: 16px;
   color: #000;
 }
+
+.btn-cep {
+  background-color: #fff;
+  padding: 6px 10px;
+  border-radius: 6px;
+  font-weight: bold;
+  color: #333;
+  text-decoration: none;
+}
+
 
 /* CONTAINER PRINCIPAL PRODUTO */
 .produto-container {
